# bssmmd_tools

./: COPYING  README
blackt/: COPYING  Makefile
blackt/src/util/: TBufStream.cpp  TBufStream.h  TIfstream.cpp  TIfstream.h  TOfstream.cpp  TOfstream.h  TStream.h  TThingyTable.cpp  TThingyTable.h
libmd/src/md/: MdColor.cpp  MdColor.h  MdPalette.cpp  MdPalette.h  MdPaletteLine.cpp  MdPaletteLine.h  MdPattern.cpp  MdPattern.h  MdTileId.cpp  MdTileId.h  MdTilemap.cpp  MdTilemap.h  MdVram.h
prg/: Makefile  bssm_freespace.txt  bssm_inject_script.txt  bssm_notes  bssm_scriptgen.sh  bssm_thingy.txt  bssm_thingy_en.txt  bssm_tilemapper.txt  build.sh  gfx.sh  gfx_maps.sh  gfxsizes.txt
prg/68kasm/: asm.h  bssm_vwf.asm  bssm_vwf.h68  bssm_vwf.lis  include.c
prg/font/: font.xcf  index.txt
prg/font/orig/: index.txt
prg/kens-1.5a1/: AUTHORS  CMakeLists.txt  ChangeLog.htm  NEWS  NOTICE  README.htm  TODO  kens 1.4.22.kdev4
prg/kens-1.5a1/src/: CMakeLists.txt
prg/kens-1.5a1/src/kens/: CMakeLists.txt  GetFileSize.h  enigma.cc  kens.h  kosinski.cc  nemesis.cc
prg/kens-1.5a1/src/tools/: CMakeLists.txt  enicmp.cpp  koscmp.cpp  nemcmp.cpp  saxcmp.cpp
prg/rsrc/credits/: transcript.txt
prg/rsrc/credits/trans/: credits.xcf  credits_orig.xcf
prg/rsrc/eyecatch/trans/: logo.xcf  logo_old.xcf  stage1_name.xcf  stage1_num.xcf  stage2_name.xcf  stage2_num.xcf  stage3_name.xcf  stage3_num.xcf  stage4_name.xcf  stage4_num.xcf  stage5_name.xcf  stage5_num.xcf
prg/rsrc/gameover/trans/: continue.xcf  gameover.xcf
prg/rsrc/misc/trans/: hud.xcf
prg/rsrc/options/trans/: digits.xcf  easy.xcf  hard.xcf  normal.xcf  options.xcf
prg/rsrc/playersel/trans/: playersel.xcf
prg/rsrc/results/trans/: digit0.xcf  digit1.xcf  digit2.xcf  digit3.xcf  digit4.xcf  digit5.xcf  digit6.xcf  digit7.xcf  digit8.xcf  digit9.xcf  text0.xcf  text1.xcf  text10.xcf  text11.xcf  text2.xcf  text3.xcf  text4.xcf  text5.xcf  text6.xcf  text7.xcf  text8.xcf  text9.xcf
prg/rsrc/stage1-1/trans/: grp.xcf
prg/rsrc/title/trans/: title.xcf  (+2 more)
prg/rsrc/voice/: subs.xcf
prg/scripts/: .~lock.bssm_script_en.csv#  .~lock.bssm_script_translated_raw.xlsx#  bssm_script_all.csv  bssm_script_all.ods  bssm_script_all_nocc.csv  bssm_script_all_nocc.ods  bssm_script_en.csv  bssm_script_translated_raw.xlsx
prg/src/: datinjct.cpp  grpundmp.cpp  logorender.cpp  logounrender.cpp  romprep.cpp  scriptgen.cpp  smfontinsr.cpp  smfontrender.cpp  smfontrip.cpp  smscriptinsr.cpp  smscriptrip.cpp  wfmtrip.cpp
prg/tilemappers/: continue.txt  credits.txt  eyecatch.txt  gameover.txt  options.txt  playersel.txt  results.txt  title.txt  voice.txt
